<resources>
    <string name="app_name">Restaurants</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_camera">Camera</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!--activity_main-->
    <string name="lbl1">Discover</string>
    <string name="lbl2">Restaurants</string>
    <string name="activity_lbl3">Mexican Bite</string>
    <string name="activity_lbl4">4.0</string>
    <string name="activity_lbl5">(100)</string>
    <string name="activity_lbl6">Mexican-18 Tank House Lane Hip spot for Mexican tapas with a patio Open until 12:00 AM.</string>
    <string name="activity_lbl7">N Ceder St and Cedar</string>

    <!--activity_detail-->
    <string name="detail_lbl1">Pickle, jam and chutney</string>
    <string name="detail_lbl2">I have a collection of food props and noticed that I have a disproportionate number of bowls compared to plates. Bowls make me happy. This was shot on a white tablecloth in my studio with natural light from a south facing window and some additional light from my Westcost 2 x 2 flex mat LED light at 30% brightness.</string>
    <string name="detail_lbl3">10am-10pm</string>
    <string name="detail_lbl4">1.5Km</string>
    <string name="detail_lbl5">Map view</string>
    <string name="detail_lbl6">Delivery</string>

    <string name="fragment_one">DETAILS</string>
    <string name="fragment_two">MENU</string>
    <string name="fragment_three">REVIEWS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snackbar_msg">Ok</string>


</resources>
