<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.mmtextview.components.MMTextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_2"
        android:layout_marginStart="@dimen/margin_6"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginEnd="@dimen/margin_6"
        android:layout_marginBottom="@dimen/margin_4"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/detail_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_near_me_black_24dp" />

    <org.mmtextview.components.MMTextView
        android:id="@+id/detail_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_6"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_6"
        android:text="@string/detail_lbl2"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:backgroundTint="@color/light_dark"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_desc"
        app:srcCompat="@drawable/ic_access_time_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:backgroundTint="@color/light_dark"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton4"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton4"
        app:srcCompat="@drawable/ic_my_location_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:backgroundTint="@color/light_dark"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton5"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton5"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton5"
        app:srcCompat="@drawable/ic_map_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:backgroundTint="@color/light_dark"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton6"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton6"
        app:srcCompat="@drawable/ic_deli_black_24dp" />

    <TextView
        android:id="@+id/detail_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_6"
        android:text="@string/detail_lbl3"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton4"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl4"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton5"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl5"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton6"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton6"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/detail_lbl6"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton7"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton7"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton7" />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>