<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_6"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:backgroundTint="@color/light_dark"
            android:elevation="@dimen/margin_4"
            app:cardCornerRadius="@dimen/margin_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_4"
                    android:backgroundTint="@color/light_dark2"
                    android:clickable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home_black_24dp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:text="@string/activity_lbl3"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
                    app:layout_constraintTop_toTopOf="@+id/floatingActionButton2" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:backgroundTint="@color/light_dark2"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_near_me_black_24dp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="@dimen/width_3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_name">

                    <org.mmtextview.components.MMTextView
                        android:id="@+id/rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_weight="0.5"
                        android:text="@string/activity_lbl4"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_star_black_24dp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_star_black_24dp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_star_black_24dp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_star_black_24dp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:src="@drawable/ic_star_blank_24dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:text="@string/activity_lbl5"
                        android:textColor="@color/white" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/restaurant_images"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_3"
                    android:src="@drawable/coffee"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintVertical_bias="0.0" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/restaurant_description"
                    android:layout_width="@dimen/width_4"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:text="@string/activity_lbl6"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_images" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>